fixed layout problems

--- a/css/main.css
+++ b/css/main.css
@@ -3,27 +3,28 @@
   background-size: cover;
   background-image: linear-gradient(to right bottom, rgba(52, 62, 79, 0.9), rgba(63, 65, 68, 0.9)), url("../img/code-background.jpg");
   background-position: bottom; }
+  .header__main-cont {
+    padding-top: 12rem; }
   .header__main-img {
     display: block;
     height: 25%;
     margin: auto;
-    text-align: center;
     border-radius: 50%;
-    transform: translateY(8rem);
     filter: grayscale(60%); }
     .header__main-img:hover {
       animation: color-me 1s ease-out forwards; }
   .header__main-links a {
     display: block;
     text-decoration: none;
-    font-size: 20rem;
+    font-size: 15rem;
     color: white;
     text-align: center; }
 
 .section__header {
   text-align: center;
   text-transform: uppercase;
-  margin-top: 10rem; }
+  margin-top: 10rem;
+  font-weight: bold; }
 
 .nav {
   position: fixed;
@@ -117,10 +118,22 @@
       background: rgba(52, 62, 79, 0.8); }
 
 .section__portfolio {
-  height: 100vh; }
+  height: 100vh;
+  padding-top: .5rem;
+  background-color: gray; }
+  .section__portfolio-header {
+    padding-bottom: 8rem; }
+  .section__portfolio-cont {
+    margin: auto;
+    border: 4px solid #3f4144;
+    border-radius: 50%;
+    background: rgba(52, 62, 79, 0.3);
+    color: white;
+    font-size: 2rem; }
 
 .section__contact {
-  height: 100vh; }
+  height: 100vh;
+  padding-top: .5rem; }
 
 *,
 *::after,
@@ -162,13 +175,13 @@ body {
 @keyframes color-me {
   0% {
     filter: grayscale(40%);
-    transform: scale(1.05) translateY(7rem); }
+    transform: scale(1.05) translateY(-1rem); }
   50% {
     filter: grayscale(20%);
-    transform: scale(1.1) translateY(6rem); }
+    transform: scale(1.1) translateY(-2rem); }
   100% {
     filter: grayscale(0%);
-    transform: scale(1.15) translateY(8rem); } }
+    transform: scale(1.15) translateY(0rem); } }
 
 @keyframes move-up {
   0% {
@@ -190,14 +203,13 @@ body {
   margin: auto;
   text-transform: uppercase; }
   .btn-text:link, .btn-text:visited {
-    margin-top: 15rem;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: #d2d4d8;
     text-decoration: none;
     border: 1px solid #d2d4d8;
     padding: 3px;
     transition: all .2s;
-    width: 10%; }
+    width: 15%; }
   .btn-text:hover {
     background-color: rgba(196, 200, 206, 0.3);
     color: #343e4f;
