--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -52,17 +52,17 @@
     0% {
       // transform: rotateY(0) translateY(8rem);
       filter: grayscale(40%);
-      transform: scale(1.05) translateY(7rem);
+      transform: scale(1.05) translateY(-1rem);
     }
     50% {
       // transform: rotateY(160deg) translateY(8rem);
       filter: grayscale(20%);
-      transform: scale(1.1) translateY(6rem);
+      transform: scale(1.1) translateY(-2rem);
     }
     100% {
      
       filter: grayscale(0%);
-      transform: scale(1.15) translateY(8rem);
+      transform: scale(1.15) translateY(0rem);
     }
   }
 
