--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,15 +4,13 @@
 
   &:link,
   &:visited {
-    margin-top: 15rem;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: $color-white;
-    // display: inline-block;
     text-decoration: none;
     border: 1px solid $color-white;
     padding: 3px;
     transition: all .2s;
-    width: 10%;
+    width: 15%;
   }
   &:hover {
     background-color: rgba($color-light-gray, 0.3);
