--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -1,3 +1,4 @@
 .section__contact {
 	height: 100vh;
+	padding-top: .5rem;
 }
