--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,14 +20,17 @@
         //   rgba(green, 0.6)),
         //   url("../img/code-background.jpg");
 
+        &-cont {
+            padding-top: 12rem;
+        }
+
 
         &-img {
         	display: block;
         	height: 25%;
         	margin: auto;
-        	text-align: center;
         	border-radius: 50%;
-        	transform: translateY(8rem);
+        	// transform: translateY(8rem);
             filter: grayscale(60%);
 
 			//maybe change later or remove
@@ -41,7 +44,7 @@
         &-links a{
         	display: block;
         	text-decoration: none;
-        	font-size: 20rem;
+        	font-size: 15rem;
         	color: white;
         	text-align: center;
         }
@@ -52,4 +55,5 @@
     text-align: center;
     text-transform: uppercase;
     margin-top: 10rem;
+    font-weight: bold;
 }
