--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,3 +1,25 @@
 .section__portfolio {
 	height: 100vh;
+	padding-top: .5rem;
+	background-color: gray;
+
+	&-header {
+		padding-bottom: 8rem;
+
+	}
+
+	
+	&-cont {
+		margin: auto;
+		// width: 5%;
+		border: 4px solid $color-gray-secondary;
+		border-radius: 50%;
+        // position: relative;
+        background: rgba($color-gray-primary, 0.3);
+
+        color: white;
+        font-size: 2rem;
+
+	}
+
 }
